<resources>
    <string name="app_name">EyeTracking</string>
    <string name="home_activity_tv_abb">Test Subject Abbreviation:</string>
    <string name="home_activity_tv_tests">Tests:</string>
    <string name="home_activity_listitem_iv_content">Settings</string>
    <string name="home_activity_dialog_camera_not_calibrated_title">Camera not calibrated</string>
    <string name="home_activity_dialog_camera_not_calibrated_message">This application requires you to calibrate your camera</string>
    <string name="home_activity_dialog_camera_not_calibrated_btn_positive">Close Application</string>
    <string name="home_activity_dialog_camera_not_calibrated_btn_negative">Calibrate Camera</string>
    <string name="home_actionbar_camera_calibration">Camera Calibration</string>
    <string name="home_actionbar_gaze_tracking_settings">Gaze Tracking Settings</string>
    <string name="home_actionbar_general_postproc">Post Processing</string>
    <string name="test_activity_listitem_test_start">Start Test</string>
    <string name="test_activity_listitem_test_show_demo">Show Demo</string>
    <string name="test_activity_listitem_test_camera_alignment">Test Camera Alignment</string>
    <string name="test_activity_tv_invalid_abbreviation">Attention: For running the test the abbreviation for the test subject cannot be empty</string>
    <string name="test_activity_dialog_close_title">Stopping</string>
    <string name="test_activity_dialog_close_message">Exiting will close the stop the complete recording. Do you want to exit?</string>
    <string name="test_activity_dialog_close_btn_yes">Yes</string>
    <string name="test_activity_dialog_close_btn_no">No</string>
    <string name="test_activity_dialog_progress_title">Please wait &#8230;</string>
    <string name="test_activity_dialog_progress_message">Loading test &#8230;</string>
    <string name="test_activity_toast_error_invalid_abbreviation">Error: Invalid test subject abbreviation. The abbreviation cannot be empty.</string>
    <string name="service_main_notification_title">Eye Tracking</string>
    <string name="service_main_notification_text">Service is running</string>
    <string name="service_main_notification_action_pause">Stop</string>
    <string name="service_postproc_notification_title">Running PostProcessing</string>
    <string name="service_postproc_notification_text_content">Expand to see processing details</string>
    <string name="service_postproc_notification_text_row1">Processing:</string>
    <string name="service_postproc_notification_text_row2_action_convertfps_video">Action: Converting Video Recording FPS</string>
    <string name="service_postproc_notification_text_row2_action_convertfps_screen">Action: Converting Screen Recording FPS</string>
    <string name="service_postproc_notification_text_row2_action_process_video_recording">Action: Processing Video Recording</string>
    <string name="service_postproc_notification_text_row2_action_process_screen_recording">Action: Processing Screen Recording</string>
    <string name="fragment_tutorial_page_2_tv1">For obtaining the camera pattern you have two options:</string>
    <string name="fragment_tutorial_page_2_tv2">1) Directly print it using cloud print</string>
    <string name="fragment_tutorial_page_2_tv3">2) Store it using cloud storage, email or some other approach and then print it manually</string>
    <string name="fragment_tutorial_page_2_tv4">Important: You have to print the pattern on a common A4 page.</string>
    <string name="fragment_tutorial_page_3_tv1">Lay the picture on a table and take pictures from different angles and distances.</string>
    <string name="fragment_tutorial_page_3_tv2">If the pattern is recognized by the application, you can take a picture by tapping on the screen.</string>
    <string name="fragment_tutorial_page_3_tv3">To make your calibration more accurate, you should capture at least 20 different pictures.</string>
    <string name="fragment_tutorial_page_3_tv4">Tip: Connecting a second screen via Miracast, MHL or SlimPort simplifies the calibration. For that the application has an extra second screen support.</string>
    <string name="fragment_testmanagement_dialog_postproc_message">Choose the settings for this post-processing run</string>
    <string name="fragment_testmanagement_dialog_postproc_cb_convertfps">Convert the video and screen recording to constant FPS</string>
    <string name="fragment_testmanagement_dialog_postproc_cb_storegazepoints_video">Store gaze points on the recorded video</string>
    <string name="fragment_testmanagement_dialog_postproc_cb_storegazepoints_screen">Store gaze points on the recorded screen</string>
    <string name="fragment_testmanagement_actionbar_select_all">Select All</string>
    <string name="fragment_testmanagement_actionbar_delete">Delete</string>
    <string name="fragment_testmanagement_actionbar_share">Share</string>
    <string name="fragment_testmanagement_actionbar_postproc">Post-Processing</string>
    <string name="preferences_general_device_category">Device Preferences</string>
    <string name="preferences_general_pref_device_orientation_title">Device Orientation</string>
    <string name="preferences_general_pref_device_orientation_summary">The orientation of the application while using it</string>
    <string name="preferences_general_camera_category">Camera Preferences</string>
    <string name="preferences_general_pref_camera_offset_x_title">Camera Offset X</string>
    <string name="preferences_general_pref_camera_offset_x_summary">The offset of the camera for the X direction relatively to the screen in landscape mode</string>
    <string name="preferences_general_pref_camera_offset_y_title">Camera Offset Y</string>
    <string name="preferences_general_pref_camera_offset_y_summary">The offset of the camera for the Y direction relatively to the screen in landscape mode</string>
    <string name="preferences_general_pref_camera_resolution_title">Camera Resolution</string>
    <string name="preferences_general_pref_camera_resolution_summary">The resolution of the camera that should be used given in landscape mode</string>
    <string name="preferences_generic_test_category">General Test Preferences</string>
    <string name="preferences_generic_test_record_screen_title">Record Screen</string>
    <string name="preferences_generic_test_record_screen_summary">Records the screen during the test. Requires root</string>
    <string name="preferences_generic_test_show_video_second_screen_title">Second Screen</string>
    <string name="preferences_generic_test_show_video_second_screen_summary">Show a video on the second screen</string>
    <string name="preferences_generic_test_second_screen_file_path_title">Video</string>
    <string name="preferences_generic_test_second_screen_file_path_summary">Choose the video you want to play on the second screen.</string>
    <string name="preferences_generic_test_log_sensor_data_title">Log Sensor Data</string>
    <string name="preferences_generic_test_log_sensor_data_summary">Logs accelerometer, gyroscope, rotation and light sensor during the test</string>
    <string name="preferences_generic_test_immersive_mode_title">Immersive Mode</string>
    <string name="preferences_generic_test_immersive_mode_summary">Shows this test in full screen. This will NOT work for the Live View Test.</string>
    <string name="preferences_rectangle_test_category">Rectangle Test Preferences</string>
    <string name="preferences_rectangle_test_time_per_rectangle_title">Time per Rectangle</string>
    <string name="preferences_rectangle_test_time_per_rectangle_summary">The amount of time (in seconds) for which a rectangle is colored</string>
    <string name="preferences_rectangle_test_play_tone_title">Play Tone</string>
    <string name="preferences_rectangle_test_play_tone_summary">Play a tone before displaying a rectangle.</string>
    <string name="preferences_rectangle_test_pause_between_rectangles_title">Pause between Rectangles</string>
    <string name="preferences_rectangle_test_pause_between_rectangles_summary">The amound of time (in seconds) between highlighting two rectangles</string>
    <string name="preferences_rectangle_test_play_music_title">Play Music</string>
    <string name="preferences_rectangle_test_play_music_summary">Play music while pausing. If pause is set to 0 seconds this setting will be ignored.</string>
    <string name="preferences_rectangle_test_music_file_path_title">Music</string>
    <string name="preferences_rectangle_test_music_file_path_summary">Choose the music you want to play</string>
    <string name="preferences_rectangle_single_test_category">Single Test Preferences</string>
    <string name="preferences_rectangle_single_test_number_of_rows_title">Number of Rows</string>
    <string name="preferences_rectangle_single_test_number_of_rows_summary">The number of rows of the grid</string>
    <string name="preferences_rectangle_single_test_number_of_columns_title">Number of Columns</string>
    <string name="preferences_rectangle_single_test_number_of_columns_summary">The number of columns of the grid</string>
    <string name="preferences_rectangle_sequence_test_category">Sequence Test Preferences</string>
    <string name="preferences_rectangle_sequence_test_time_per_sequence_title">Time per Sequence</string>
    <string name="preferences_rectangle_sequence_test_time_per_sequence_summary">The amount of time (in seconds) for which a sequence is running</string>
    <string name="preferences_word_test_category">Word Test Preferences</string>
    <string name="preferences_word_test_time_per_word_title">Duration</string>
    <string name="preferences_word_test_time_per_word_summary">The time for which each word is highlighted</string>
    <string name="preferences_word_test_text_file_path_title">Text</string>
    <string name="preferences_word_test_text_file_path_summary">Choose the text you want to show</string>
    <string name="preferences_video_test_category">Video Test Preferences</string>
    <string name="preferences_video_test_file_path_title">Video</string>
    <string name="preferences_video_test_file_path_summary">Choose the video you want to play</string>
    <string name="preferences_video_test_loop_video_title">Loop</string>
    <string name="preferences_video_test_loop_video_summary">Plays the video in a loop</string>
    <string name="preferences_line_test_category">Line Test</string>
    <string name="preferences_line_test_velocity_title">Velocity</string>
    <string name="preferences_line_test_velocity_summary">The velocity which is used for moving the ball along a line</string>
    <string name="preferences_line_test_number_of_lines">Number of Lines:</string>
    <string name="preferences_line_test_number_of_lines_summary">The number of lines that are used</string>
    <string name="preferences_line_test_number_of_repetitions_title">Number of Repetitions</string>
    <string name="preferences_line_test_number_of_repetitions_summary">The number of repetitions</string>
    <string name="preferences_screen_test_category">Second Screen Test Preferences</string>
    <string name="preferences_screen_test_time_on_tablet_title">Gazing Time on Tablet</string>
    <string name="preferences_screen_test_time_on_tablet_summary">The amount of time (in seconds) for which a person gazes on the tablet</string>
    <string name="preferences_screen_test_time_beside_tablet_title">Gazing Time beside Tablet</string>
    <string name="preferences_screen_test_time_beside_tablet_summary">The amount of time (in seconds) for which a person gazes beside the tablet</string>
    <string name="preferences_screen_test_number_of_repetitions_title">Number of Repetitions</string>
    <string name="preferences_screen_test_number_of_repetitions_summary">The number of repetitions</string>
</resources>