<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/preferences_rectangle_single_test_category" >
        <ListPreference
            android:defaultValue="@string/test_rectangle_single_pref_number_of_rows_default"
            android:entries="@array/test_rectangle_single_pref_number_of_rows"
            android:entryValues="@array/test_rectangle_single_pref_number_of_rows"
            android:key="pref_rectangle_test_single_number_of_rows"
            android:summary="@string/preferences_rectangle_single_test_number_of_rows_summary"
            android:title="@string/preferences_rectangle_single_test_number_of_rows_title" />
        <ListPreference
            android:defaultValue="@string/test_rectangle_single_pref_number_of_columns_default"
            android:entries="@array/test_rectangle_single_pref_number_of_columns"
            android:entryValues="@array/test_rectangle_single_pref_number_of_columns"
            android:key="pref_rectangle_test_single_number_of_columns"
            android:summary="@string/preferences_rectangle_single_test_number_of_columns_summary"
            android:title="@string/preferences_rectangle_single_test_number_of_columns_title" />
    </PreferenceCategory>

</PreferenceScreen>