<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/fragment_testmanagement_dialog_postproc_message"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <CheckBox
        android:id="@+id/testmanagement_fragment_dialog_postproc_cb_convertfps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="true"
        android:text="@string/fragment_testmanagement_dialog_postproc_cb_convertfps" />

    <CheckBox
        android:id="@+id/testmanagement_fragment_dialog_postproc_cb_storegazepoints_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="true"
        android:text="@string/fragment_testmanagement_dialog_postproc_cb_storegazepoints_video" />

    <CheckBox
        android:id="@+id/testmanagement_fragment_dialog_postproc_cb_storegazepoints_screen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:checked="true"
        android:text="@string/fragment_testmanagement_dialog_postproc_cb_storegazepoints_screen" />

</LinearLayout>